Fix inspector overflow

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -26,6 +26,7 @@ html {
   grid-template-areas:
     'left right';
   grid-template-columns: auto 300px;
+  grid-template-rows: 1fr;
 }
 
 .canvas {
@@ -36,7 +37,8 @@ html {
 
 .inspector {
   grid-area: right;
-  height: 100%;
+  height: 100vh;
+  overflow: auto;
   background-color: #fdf5e3;
   box-shadow: 0 0 4px 0 #d8d4c4;
 }
@@ -54,9 +56,11 @@ html {
 }
 
 .components {
+  overflow: auto;
   padding: 0;
   margin: 0;
   list-style-type: none;
+  overflow: scroll;
 }
 
 .component-name {
